--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
